dev/frontend/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-app-frontend-dev-deployment
  namespace: quiz-app-frontend-dev
  labels:
    app: quiz-app-frontend
    env: dev
  
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: quiz-app-frontend
      env: dev
  template:
    metadata:
      labels:
        app: quiz-app-frontend
        env: dev
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: quiz-app-backend-dev
          image: 587866558777.dkr.ecr.ap-southeast-2.amazonaws.com/quiz-app-frontend-dev:f449785a663256cf3af604f8bc312f9153025970
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
