dev/frontend/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-app-frontend-dev-ingress
  namespace: quiz-app-frontend-dev
  annotations:
    kubernetes.io/ingress.class: alb
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: quiz-app-frontend-dev-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:587866558777:certificate/e82b0efc-9020-4eea-b6e6-5ce054a186da
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health-check

spec:
  rules:
    - host: quizapp.barneywang.click
      http:
        paths: 
          - path: /
            pathType: Prefix
            frontend:
              service:
                name: quiz-app-frontend-dev-service
                port:
                  number: 8080
